syntax = "proto3";
package grpc.cluster;

import "jobmanager/parameter.proto";
import "jobmanager/module_type.proto";

option csharp_namespace = "Microsoft.CGC.GRPC.Cluster";

message  Task {
    /// <summary>
    ///     The list of task input parameters.
    /// </summary>
    repeated .grpc.jobmanager.InputParameter input_parameters= 1;

    /// <summary>
    ///     The list of task output parameters.
    /// </summary>
    repeated .grpc.jobmanager.OutputParameter output_parameters = 2;

    /// <summary>
    ///     The HDFS path of source code.
    /// </summary>
    string src_code_path = 3;

    /// <summary>
    ///     <para>The command to run the module.</para>
    ///     <example>"python run.py --arg0=... --arg1=..."</example>
    /// </summary>
    string command = 4;

    /// <summary>
    ///     Cluster specific configurations are put here.
    /// </summary>
    string config = 5;

    .grpc.jobmanager.ModuleType task_type = 6;
}